element class. These support a pseudo-pod syntax that enable a complete
hierrachy of elements to be edited, including links to related stories and
media, in a single stream of text. [David]

=item *

Converted "Bulk Edit" in the UI to use the new POD syntax supported by the
element classes and eliminated the old "Super Bulk Edit" interface since it
became redundant. [David]

=item *

Added the 'Include deleted' checkbox to Advanced Search in 'Find Stories' and
'Find Media' to allow reactivating deleted Stories and Media. [Scott]

=back

=head2 Improvements

=over

=item *

Added C<related_story_id> and C<related_media_id> parameters to the C<list()>
method of the story and media classes to search for stories and media that
have a given story or media ID or list of IDs as relateds. Based on a patch
from Rod Taylor. [David]

=item *

Moved story, media, and template notes into a column in the appropriate
instance table, instead using attributes. This is a much more efficient use of
the database and eliminates a lot of cruft. [David]

=item *

Added C<has_notes()> method to Bric::Biz::Asset (and therefore its story,
media, and template subclasses) as a more efficient way of determining whether
an asset has notes for any of its versions than calling the C<get_notes()>
method. [David]

=item *

Added C<note> parameter to the list method of the story, media, and template
classes. Unlike most of the parameters, this one will return assets with
C<any> of their versions having a note matching the C<note> parameter. [David]

=item *

Updated search documentation and wrote tests for:

=over

=item L<Bric::Dist::ActionType|Bric::Dist::ActionType>

=item L<Bric::Util::Alert|Bric::Util::Alert>

=item L<Bric::Util::Alerted|Bric::Util::Alerted>

=item L<Bric::Util::AlertType::Parts::Rule|Bric::Util::AlertType::Parts::Rule>

=item L<Bric::Util::Event|Bric::Util::Event>

=back

[David]

=item *

The new "Repreview" iframe now works for the links in subelements, too.
[David]

=item *