@@ -738,6 +738,7 @@ To Translate:
   'Name "[_1]" is not a valid media name. The name must be of the form "type/subtype".' => 'Name "[_1]" is not a valid media name. The name must be of the form "type/subtype".',
   'Include deleted' => 'Include deleted',
   'Reactivate' => 'Reactivate',
+  'All Subelements' => 'All Subelements',
 
 =end comment
 
